deploying-hello-world-web-application-with-go/hello-web-deployment-and-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-web
  labels:
    app.kubernetes.io/name: hello-web
    app.kubernetes.io/component: frontend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-web
      app.kubernetes.io/component: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-web
        app.kubernetes.io/component: frontend
    spec:
      containers:
        - name: hello-web
          image: gcr.io/google-samples/hello-app:1.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m

---

apiVersion: v1
kind: Service
metadata:
  name: hello-web
  labels:
    app.kubernetes.io/name: hello-web
    app.kubernetes.io/component: frontend
spec:
  selector:
    app.kubernetes.io/name: hello-web
    app.kubernetes.io/component: frontend
  ports:
    - port: 80
      targetPort: 8080
