deploying-hello-world-web-application-with-go/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-web
  labels:
    app.kubernetes.io/name: hello-web
    app.kubernetes.io/component: frontend

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-web
                port:
                  number: 80
